Fix overflow for sidebar

--- a/ui/app/styles/components/exec.scss
+++ b/ui/app/styles/components/exec.scss
@@ -25,6 +25,7 @@
   padding: 16px;
   width: 200px; // these px sizes… 🧐
   flex-shrink: 0;
+  overflow-y: scroll;
 
   .title {
     text-transform: uppercase;
